--- a/_config.yml
+++ b/_config.yml
@@ -13,15 +13,15 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Abigail Dow
-email: abidow@bu.edu
+title: Hitchens
+email: hello@patdryburgh.com
 description: >- # this means to ignore newlines until "baseurl:"
-  
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://abigaildow.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+  An inarguably well-designed Jekyll theme.
+baseurl: "/hitchens" # the subpath of your site, e.g. /blog
+url: "https://patdryburgh.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/icon-512.png
-twitter_username: abi_dow
-github_username:  ad439
+twitter_username: patdryburgh
+github_username:  patdryburgh
 
 # Build settings
 markdown: kramdown
@@ -40,6 +40,9 @@ markdown: kramdown
 
 plugins:
   - jekyll-paginate
+
+paginate: 3
+paginate_path: "/page/:num/"
 
 paginate: 3
 paginate_path: "/page/:num/"
