--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Abigail Dow
 email: abidow@bu.edu
-description: >- # this means to ignore newlines until "baseurl:"
+#description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://abigaildow.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # icon: /assets/images/icon-512.png
