--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Abigail Dow
 email: abidow@bu.edu
 description: PhD student in Economics, Boston University
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "abigaildow.com" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://abigaildow.com" # the base hostname & protocol for your site, e.g. http://example.com
 icon: /assets/images/circle_headshot.png
 twitter_username: abi_dow
 # github_username:  patdryburgh
