Link straight to cv

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -5,7 +5,10 @@
   url: /about.html
 
 - title: CV
-  url: /cv.html
+ #url: /cv.html
+ url: /assets/docs/abigail_dow_cv.pdf
 
 - title: Contact
   url: /contact.html
+
+
