Adding research page

--- a/_data/menu.yml
+++ b/_data/menu.yml
@@ -1,14 +1,14 @@
 - title: Home
   url: /index.html
 
-- title: About
-  url: /about.html
+- title: Research
+  url: /research.html
 
 - title: CV
   url: /assets/docs/abigail_dow_cv.pdf
 
-- title: Contact
-  url: /contact.html
+
+
 
 
 
